[package]
name = "graph-node"
version = "0.1.0"
edition = "2021"
description = "graph-node is an another graph crate write in Rust"
keywords = ["graph", "tree", "node"]
categories = ["graph"]
homepage = "https://github.com/LeopoldBriand/graph-node"
repository = "https://github.com/LeopoldBriand/graph-node.git"
license = "MIT OR Apache-2.0"

[dependencies]
aquamarine = "0.3.0" # graph in documentation